--- a/index.html
+++ b/index.html
@@ -216,19 +216,12 @@
                         <table border="0" cellpadding="0" cellspacing="0" role="presentation" style="border-collapse:collapse;border-spacing:0px;">
                           <tbody>
                             <tr>
-                              <td style="width:550px;">
-                                <img alt="Tap into Motivation" height="auto" src="https://www.emailimagecdnrvf6.com/m5kl73tpfe/en_us/images/61f99887b5010-1643747463.7414.png" style="border:0;display:block;outline:none;text-decoration:none;height:auto;width:100%;font-size:13px;" width="550">
+                              <td style="width:600px;">
+                                <img alt="Tap into Motivation" height="auto" src="https://www.emailimagecdnrvf6.com/m5kl73tpfe/en_us/images/62221e46a0fa5-1646403142.6594.gif" style="border:0;display:block;outline:none;text-decoration:none;height:auto;width:100%;font-size:13px;" width="600">
                               </td>
                             </tr>
                           </tbody>
                         </table>
-                      </td>
-                    </tr>
-                    <tr>
-                      <td align="left" style="font-size:0px;padding:10px 25px;word-break:break-word;">
-                        <div style="font-family:Roboto, san-serif;font-size:60px;font-weight:1000;letter-spacing:8px;line-height:70px;text-align:left;text-transform:uppercase;color:black;">
-                          <div class="text-title">Tap into <br> Motivation</div>
-                        </div>
                       </td>
                     </tr>
                   </tbody>
